slides: split aula02.html content into aula02.html and aula04.html

--- a/slides/aula02.html
+++ b/slides/aula02.html
@@ -1652,301 +1652,10 @@
           </div>
 
           <div class='fragment local-standout-box'><code>while</code> é uma das
-            duas estruturas de repetição de Python. A outra é <code>for</code>.
+            duas estruturas de repetição de Python. A outra é <code>for</code>
+            e a veremos na próxima aula.
           </div>
         </section>
-
-
-
-        <section data-auto-animate>
-          <p>Nosso primeiro laço</p>
-          <p style='font-size: .8em'>O mesmo programa utilizando
-          <code>for</code>:</p>
-
-          <div class='fragment'>
-            <div
-              class='ace-brython'
-              style='font-size: .5em; height: 14em;'
-              data-prev='first-loop-while'
-              >
-              <script type='text/x.ace-brython'>
-                def soma_n(n):
-                    soma = 0
-                    for i in range(0, n):
-                      soma += i
-
-                    return soma
-
-
-                print(soma_n(10))
-                print(soma_n(4))
-              </script>
-            </div>
-
-            <div style='font-size: .8em; text-align: left;'>
-              <ul>
-                <li>
-                  A chamada de função <code>range(0, n)</code> retorna um
-                  <strong>iterável</strong> que produz números de
-                  <span class='math-font'>0</span> a
-                  <span class='math-font'>n - 1</span>
-                </li>
-                <li>
-                  Valores do tipo <strong>iterável</strong> representam objetos
-                  que permitem ser usados com a instrução <code>for</code>,
-                  iterando sobre seus itens
-                </li>
-              </ul>
-            </div>
-            <div class='fragment local-standout-box' style='bottom: 1.5em;'>
-              Exemplos de objetos iteráveis as coleções, que veremos mais
-              adiante.
-            </div>
-          </div>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <p class='fragment fade-in-then-semi-out'>Por que temos duas
-          estruturas diferentes para laços?</p>
-
-          <p class='fragment'><code>for</code> é bem conveniente quanto estamos
-          utilizando coleções e/ou já se sabe de antemão a quantidade de
-          repetições</p>
-
-
-          <p class='fragment'><code>while</code> acaba sendo necessário quando
-          não se sabe por quanto tempo o bloco de instruções deve ser
-          repetido</p>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <p>
-            Exemplo: vamos implementar um jogo onde o usuário precisa descobrir
-            um número que está entre 1 e 100.
-          </p>
-          <br/>
-          <p class='fragment'>
-            Estratégia: repetidamente ler um palpite do usuário até ele
-            acertar.
-          </p>
-          <div class='fragment local-standout-box'>
-            Neste caso, não tem como saber quantas vezes vamos repetir, então
-            precisaremos utilizar a estrutura <code>while</code>!
-          </div>
-        </section>
-
-
-        <section data-auto-animate>
-          <p>Nossa solução:</p>
-          <div class='ace-brython' data-components='code'>
-            <script type='text/x.ace-brython'>
-              import random
-
-              numero_secreto = random.randint(1, 100)
-              palpite = int(input('Qual seu palpite? '))
-
-              while palpite != numero_secreto:
-                  if palpite > numero_secreto:
-                    print('Número secreto é menor que o palpite')
-                  else:
-                    print('Número secreto é maior que o palpite')
-
-                  palpite = int(input('Qual seu novo palpite? '))
-
-              print('Parabéns, você acertou!')
-            </script>
-          </div>
-          <div class='local-standout-box fragment' style='bottom: 1em; font-size: .9em;'>
-            Desafio: você conseguiria implementar o contrário: um programa que
-            tenta descobrir um número selecionado pelo usuário com poucos
-            palpites?
-          </div>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <h4>Instrução <code>break</code></h4>
-        </section>
-
-
-        <section data-auto-animate>
-          <h4>Instrução <code>break</code></h4>
-          <p>
-            Muitas vezes é comum querermos sair imediatamente de um
-            laço caso alguma condição seja satisfeita, ignorando o
-            restante das linhas presentes no bloco.
-          </p>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <h4>Instrução <code>break</code></h4>
-          <p>
-            Muitas vezes é comum querermos sair imediatamente de um
-            laço caso alguma condição seja satisfeita, ignorando o
-            restante das linhas presentes no bloco.
-          </p>
-          <p>
-            Chamamos isto de <strong>quebrar</strong> o laço e utilizamos a
-            instrução <code>break</code> para fazê-lo.
-          </p>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <h4>Instrução <code>break</code></h4>
-          <p>
-            Um exemplo de quebrando um <code>while</code>:
-            <br/>
-            <em>Um programa papagaio</em>: programa que repete cada entrada do
-            usuário até que o mesmo diga "tchau".
-          </p>
-
-          <div class='ace-brython fragment' data-components='code'
-               style='font-size: .6em; flex: 1;'
-          >
-            <script type='text/x.ace-brython'>
-              print('Conversa com papagaio')
-
-              while True:
-                frase = input('Usuário: ')
-
-                if frase == 'tchau':
-                  break
-                  print('Esta linha de código nunca será executada!')
-
-                print('Papagaio:', frase)
-
-              print('Fim')
-            </script>
-          </div>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <h4>Instrução <code>continue</code></h4>
-          <p>
-            Assim como o <code>break</code>, a instrução <code>continue</code>
-            também pára a execução do bloco.
-          </p>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <h4>Instrução <code>continue</code></h4>
-          <p>
-            Assim como o <code>break</code>, a instrução <code>continue</code>
-            também pára a execução do bloco.
-          </p>
-          <p>
-            Porém, em vez de sair do laço, a instrução move o fluxo do programa
-            para a <strong>próxima iteração</strong>.
-          </p>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <h4>Instrução <code>continue</code></h4>
-          <p style='font-size: .8em;'>
-            Exemplo com um <code>while</code>: Um programa para pedir a senha
-            do usuário até ele acertar.
-          </p>
-          <div class='ace-brython fragment' data-components='code'
-               style='font-size: .5em; flex: 1;'
-          >
-            <script type='text/x.ace-brython'>
-              # Exemplo de que só executa o bloco inteiro quando a senha não
-              # está vazia e está correta
-              print('Digite seu nome')
-              nome = input()
-              print('Olá,' + nome + '!')
-
-              while True:
-                  senha = input('Por favor, digite a senha: ')
-
-                  if not senha:
-                    print('Senha vazia')
-                    continue
-
-                  if senha != '1234':
-                    print('Senha incorreta!')
-                    continue
-
-                  break
-
-              print('Senha correta, login efetuado com sucesso!')
-              print('Até a próxima!')
-            </script>
-          </div>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <p style='font-size: .8em;'>Note que <code>break</code> e
-          <code>continue</code> também podem ser utilizados em laços do tipo
-          <code>for</code>.</p>
-
-          <p class='fragment'>Exemplo: permitir no máximo 5 tentativas de
-          login.</p>
-
-          <div class='ace-brython fragment' data-components='code'
-               style='font-size: .6em;'
-          >
-            <script type='text/x.ace-brython'>
-              sucesso = False
-              # Pedir senha no máximo 5 vezes
-              for i in range(5):
-                  senha = input('Digite a senha: ')
-                  if senha == '1234':
-                    sucesso = True
-                    break
-
-              if sucesso:
-                  print('Login realizado com sucesso')
-              else:
-                  print('Login bloqueado')
-
-            </script>
-          </div>
-        </section>
-
-
-
-        <section data-auto-animate>
-          <p style='font-size: .8em;'>Note que <code>break</code> e
-          <code>continue</code> também podem ser utilizados em laços do tipo
-          <code>for</code>.</p>
-
-          <p class='fragment'>
-            Exemplo: realizar soma de apenas números ímpares.
-          </p>
-
-          <div class='ace-brython fragment' data-components='code'
-               style='font-size: .6em;'
-          >
-            <script type='text/x.ace-brython'>
-              # Exemplo de código que ignora os valores ímpares
-              soma = 0
-              for i in range(0, 10):
-                if i % 2 == 0:
-                  continue
-                soma += i
-              print(soma)
-            </script>
-          </div>
-        </section>
-
 
 
         <section>
