slides: some fixes for aula04

--- a/slides/aula04.html
+++ b/slides/aula04.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Aula 02</title>
+    <title>Aula 04</title>
 
     <!-- Revealjs styles -->
     <link rel="stylesheet" href="../revealjs/dist/reset.css">
@@ -112,7 +112,7 @@
               </ul>
             </div>
             <div class='fragment local-standout-box' style='bottom: 1.5em;'>
-              Exemplos de objetos iteráveis as coleções, que veremos mais
+              Exemplos de objetos iteráveis são as coleções, que veremos mais
               adiante.
             </div>
           </div>
@@ -130,8 +130,7 @@
 
 
           <p class='fragment'><code>while</code> acaba sendo necessário quando
-          não se sabe por quanto tempo o bloco de instruções deve ser
-          repetido</p>
+          não se sabe quantas vezes o bloco de instruções deve ser repetido</p>
         </section>
 
 
